--- a/css/style3.css
+++ b/css/style3.css
@@ -1,8 +1,54 @@
+@font-face {
+  font-family: 'icons';
+  src: url("font/icons.eot");
+  src: url(".font/icons.eot?#iefix") format('embedded-opentype'), url("font/icons.woff") format('woff'), url("font/icons.ttf") format('truetype'), url("font/icons.svg#icons") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+*,
+*:after,
+*:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
 .sb-container {
 	position: relative;
-	width: 150px;
+	width: 500px;
 	height: 400px;
-	margin: 30px auto 0 auto;
+	margin: 30px 11% 0 auto;
+}
+
+.chapter{
+font-family: 'Lato', sans-serif;
+font-size: 25px;
+text-transform: uppercase;
+font-weight: 400;
+color: #A7A0A0;
+display: block;
+width: 100%;
+text-align: center;
+font-style: normal;
+margin-top: -51px;
 }
 
 .sb-container div {
@@ -11,7 +57,7 @@
 	left: 0; 
 	width: 130px;
 	background: #fff;
-	height: 400px;
+	height: 300px;
 	border-radius: 5px;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1);
 	cursor: pointer;
@@ -33,32 +79,32 @@
 }
 
 .sb-container div:nth-child(1){
-	background-color: #ea2a29;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 1px 1px 1px rgba(0,0,0,0.1), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(2){
-	background-color: #f16729;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 2px 2px 1px rgba(0,0,0,0.1), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(3){
-	background-color: #f89322;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 3px 3px 2px rgba(0,0,0,0.2), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(4){
-	background-color: #ffcf14;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 4px 4px 4px rgba(0,0,0,0.2), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(5){
-	background-color: #ffea0d;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 5px 5px 6px rgba(0,0,0,0.3), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(6){
-	background-color: #87b11d;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 6px 6px 8px rgba(0,0,0,0.3), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
@@ -68,22 +114,22 @@
 }
 
 .sb-container div:nth-child(8){
-	background-color: #3277b5;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 8px 8px 12px rgba(0,0,0,0.4), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(9){
-	background-color: #4c549f;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 9px 9px 14px rgba(0,0,0,0.4), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(10){
-	background-color: #764394;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 10px 10px 16px rgba(0,0,0,0.4), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
 .sb-container div:nth-child(11){
-	background-color: #ca0d86;
+	background-color: #008253;
 	box-shadow: -1px -1px 3px rgba(0,0,0,0.1), 11px 11px 18px rgba(0,0,0,0.4), inset 0 3px 0 rgba(255, 255, 255, 0.2);
 }
 
