--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
+
 body {
   background-color: 34495e; /* for the tint */
 }
@@ -84,6 +85,15 @@ body {
 
 .deploy-sidebar{
 	background-image:url(../images/misc/deploy-nav.png);
+	background-repeat:no-repeat;
+	width:50px;
+	height:50px;
+	background-size:18px 12px;
+	background-position:20px 18px;
+}
+
+.deploy-back{
+	background-image:url(../images/ui/prev1.png);
 	background-repeat:no-repeat;
 	width:50px;
 	height:50px;
